@@ -1,6 +1,7 @@
 package back.backend.service;
 
 import back.backend.dto.EstatisticaProtocoloMEDTO;
+import back.backend.dto.ProtocoloSemEstatisticaDTO;
 import back.backend.exception.RecursoNaoEncontradoException;
 import back.backend.model.EstatisticaProtocoloME;
 import back.backend.model.ProtocoloME;
@@ -38,32 +39,29 @@ public class EstatisticaProtocoloMEService {
     private static final TypeReference<Map<String, String>> TYPE_REF_MAP =
             new TypeReference<>() {};
 
-    private static final List<String> CAMPOS_PROTOCOLO = Arrays.asList(
-            "ofNac","rgctDoador","nomeDoador","hospitalNotif","dataOf","regPdot","regOf",
-            "mes","municipio","idDoad","faixaEtariaDoad","sexoDoad","aboDoad",
-            "resCausaMorte","dm","has","etilismo","tabagismo","crInicial","crFinal",
-            "rimD","rimE","coracao","pulmD","pulmE","figado","corneas","pele","ossoMusculo",
-            "destRimD","destRimE","destCoracao","destPulmD","destPulmE","destFigado",
-            "txRinsBloco","txPulmBilat","txRimFig","txPulmDRim","txPulmERim","txCorRim",
-            "txCorPulm","descarteRimD","descarteRimE","descarteCoracao","descartePulmaoD",
-            "descartePulmaoE","descarteFigado","motivoDescarteEsclarecer",
-            "hospEquipeRecRd","rgctRd","receptorRd","idadeRecRd","sexoRecRd","mesTxRd",
-            "hospEquipeRecRe","rgctRe","receptorRe","idadeRecRe","sexoRecRe","mesTxRe",
-            "hospEquipeRecFig","rgctFig","receptorFig","idadeRecFig","sexoRecFig","mesTxFig",
-            "hospEquipeRecPulmD","rgctPulmD","receptorPulmD","idadeRecPulmD","sexoRecPulmD","mesTxPulmD",
-            "hospEquipeRecPulmE","rgctPulmE","receptorPulmE","idadeRecPulmE","sexoRecPulmE","mesTxPulmE",
-            "hospEquipeRecCor","rgctCor","receptorCor","idadeRecCor","sexoRecCor","mesTxCor",
-            "doadorOfertaNacional","classif","algumOrgaoImplantadoNoRs",
-            "recusaRim","recusaFigado","recusaCoracao","recusaPulmao","observacoes"
+    // 🔥 CACHE DE FIELDS (melhora performance)
+    private static final Map<String, Field> FIELD_CACHE = new HashMap<>();
+
+    static {
+        for (Field field : EstatisticaProtocoloME.class.getDeclaredFields()) {
+            field.setAccessible(true);
+            FIELD_CACHE.put(field.getName(), field);
+        }
+    }
+
+    // 🔥 CAMPOS PADRÃO (ajusta conforme SNT)
+    private static final List<String> CAMPOS_PROTOCOLO = List.of(
+            "nomeDoador", "rgctDoador", "hospitalNotif",
+            "municipio", "sexoDoad", "aboDoad"
     );
 
-    private static final List<String> CAMPOS_SIM_NAO = Arrays.asList(
-            "dm","has","etilismo","tabagismo","rimD","rimE","coracao","pulmD","pulmE","figado",
-            "corneas","pele","ossoMusculo","txRinsBloco","txPulmBilat","txRimFig","txPulmDRim",
-            "txPulmERim","txCorRim","txCorPulm","descarteRimD","descarteRimE","descarteCoracao",
-            "descartePulmaoD","descartePulmaoE","descarteFigado","doadorOfertaNacional",
-            "algumOrgaoImplantadoNoRs","recusaRim","recusaFigado","recusaCoracao","recusaPulmao"
+    private static final List<String> CAMPOS_SIM_NAO = List.of(
+            "rimD", "rimE", "figado", "coracao", "pulmD", "pulmE"
     );
+
+    // =========================
+    // MIGRAÇÃO JSON → COLUNAS
+    // =========================
 
     @PostConstruct
     public void migrarDadosLegadosParaColunas() {
@@ -89,164 +87,150 @@ public class EstatisticaProtocoloMEService {
         }
     }
 
-    public EstatisticaProtocoloMEDTO obterPorProtocoloId(Long protocoloId) {
+    // =========================
+    // 🔥 GERAÇÃO AUTOMÁTICA
+    // =========================
+
+    public EstatisticaProtocoloME gerarPorProtocolo(Long protocoloId) {
 
         ProtocoloME protocolo = protocoloRepository.findById(protocoloId)
-            .orElseThrow(() -> new RecursoNaoEncontradoException("Protocolo não encontrado"));
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Protocolo não encontrado"));
 
-        return estatisticaRepository.findByProtocoloMEId(protocoloId)
-                .map(e -> toDTO(e, protocolo))
-                .orElseGet(() -> toDTO(new EstatisticaProtocoloME(), protocolo));
-    }
-
-    public EstatisticaProtocoloMEDTO salvarOuAtualizar(Long protocoloId,
-                                                       EstatisticaProtocoloMEDTO payload) {
-
-        ProtocoloME protocolo = protocoloRepository.findById(protocoloId)
-            .orElseThrow(() -> new RecursoNaoEncontradoException("Protocolo não encontrado"));
-
-        EstatisticaProtocoloME estatistica =
-                estatisticaRepository.findByProtocoloMEId(protocoloId)
-                        .orElseGet(EstatisticaProtocoloME::new);
-
+        EstatisticaProtocoloME estatistica = new EstatisticaProtocoloME();
         estatistica.setProtocoloME(protocolo);
-        estatistica.setAtualizadoPor(payload.getAtualizadoPor());
+
+        // 📅 competência
+        if (protocolo.getDataNotificacao() != null) {
+            estatistica.setAnoCompetencia(protocolo.getDataNotificacao().getYear());
+            estatistica.setMesCompetencia(protocolo.getDataNotificacao().getMonthValue());
+        }
+
+        // 👤 dados do doador
+        if (protocolo.getPaciente() != null) {
+            estatistica.setNomeDoador(protocolo.getPaciente().getNome());
+        }
+
+        estatistica.setHospitalNotif(protocolo.getHospitalOrigem());
         estatistica.setDataAtualizacao(LocalDateTime.now());
 
-        aplicarCamposNaEntidade(estatistica, payload.getCampos());
-
-        return toDTO(estatisticaRepository.save(estatistica), protocolo);
+        return estatisticaRepository.save(estatistica);
     }
 
-    // restante da sua lógica mantida igual (reflection etc.)
-
-    private String normalizarPeriodicidade(String periodicidade) {
-        if (periodicidade == null) return "ANUAL";
-        String p = periodicidade.toUpperCase();
-        return (p.equals("MENSAL") || p.equals("ANUAL")) ? p : "ANUAL";
-    }
+    // =========================
+    // LISTAGENS
+    // =========================
 
     public List<EstatisticaProtocoloMEDTO> listarPorPeriodicidade(String periodicidade, Integer ano, Integer mes) {
-        String periodicidadeNormalizada = normalizarPeriodicidade(periodicidade);
+
+        if (mes != null && ano == null) {
+            throw new IllegalArgumentException("Mês precisa ser informado junto com o ano");
+        }
 
         return estatisticaRepository.findAll().stream()
-                .filter(estatistica -> periodicidadeNormalizada.equalsIgnoreCase(normalizarPeriodicidade(estatistica.getPeriodicidade())))
-                .filter(estatistica -> ano == null || Objects.equals(estatistica.getAnoCompetencia(), ano))
-                .filter(estatistica -> mes == null || Objects.equals(estatistica.getMesCompetencia(), mes))
-                .map(estatistica -> toDTO(estatistica, estatistica.getProtocoloME()))
+                .filter(e -> periodicidade == null || e.getPeriodicidade().equalsIgnoreCase(periodicidade))
+                .filter(e -> ano == null || Objects.equals(e.getAnoCompetencia(), ano))
+                .filter(e -> mes == null || Objects.equals(e.getMesCompetencia(), mes))
+                .map(e -> toDTO(e, e.getProtocoloME()))
                 .collect(Collectors.toList());
     }
 
     public List<ProtocoloSemEstatisticaDTO> listarProtocolosSemEstatistica(Integer ano) {
+
         Set<Long> idsComEstatistica = estatisticaRepository.findAll().stream()
                 .map(e -> e.getProtocoloME() != null ? e.getProtocoloME().getId() : null)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
 
         return protocoloRepository.findAll().stream()
-                .filter(protocolo -> !idsComEstatistica.contains(protocolo.getId()))
-                .filter(protocolo -> ano == null || (protocolo.getDataNotificacao() != null && protocolo.getDataNotificacao().getYear() == ano))
-                .map(protocolo -> {
+                .filter(p -> !idsComEstatistica.contains(p.getId()))
+                .filter(p -> ano == null ||
+                        (p.getDataNotificacao() != null &&
+                         p.getDataNotificacao().getYear() == ano))
+                .map(p -> {
                     ProtocoloSemEstatisticaDTO dto = new ProtocoloSemEstatisticaDTO();
-                    dto.setProtocoloId(protocolo.getId());
-                    dto.setNumeroProtocolo(protocolo.getNumeroProtocolo());
-                    dto.setPacienteId(protocolo.getPaciente() != null ? protocolo.getPaciente().getId() : null);
-                    dto.setNomeDoador(protocolo.getPaciente() != null ? protocolo.getPaciente().getNome() : null);
+                    dto.setProtocoloId(p.getId());
+                    dto.setNumeroProtocolo(p.getNumeroProtocolo());
+                    dto.setNomeDoador(p.getPaciente() != null ? p.getPaciente().getNome() : null);
                     dto.setAno(ano);
                     return dto;
                 })
                 .collect(Collectors.toList());
     }
 
+    // =========================
+    // REFLECTION HELPERS
+    // =========================
+
     private void aplicarCamposNaEntidade(EstatisticaProtocoloME estatistica, Map<String, String> campos) {
+
         estatistica.setDadosCamposJson(writeCamposJson(campos));
 
         for (Map.Entry<String, String> entry : campos.entrySet()) {
-            try {
-                Field field = EstatisticaProtocoloME.class.getDeclaredField(entry.getKey());
-                field.setAccessible(true);
-                if (field.getType() == String.class) {
+
+            Field field = FIELD_CACHE.get(entry.getKey());
+
+            if (field != null && field.getType() == String.class) {
+                try {
                     field.set(estatistica, entry.getValue());
+                } catch (IllegalAccessException e) {
+                    throw new IllegalStateException("Erro ao aplicar campo " + entry.getKey(), e);
                 }
-            } catch (NoSuchFieldException ignored) {
-                // Campo legado não mapeado diretamente
-            } catch (IllegalAccessException e) {
-                throw new IllegalStateException("Erro ao aplicar campo " + entry.getKey(), e);
             }
         }
-    }
-
-    private EstatisticaProtocoloMEDTO toDTO(EstatisticaProtocoloME estatistica, ProtocoloME protocolo) {
-        EstatisticaProtocoloMEDTO dto = new EstatisticaProtocoloMEDTO();
-        dto.setId(estatistica.getId());
-        dto.setProtocoloMEId(protocolo != null ? protocolo.getId() : null);
-        dto.setNumeroProtocolo(protocolo != null ? protocolo.getNumeroProtocolo() : null);
-        dto.setPacienteId(protocolo != null && protocolo.getPaciente() != null ? protocolo.getPaciente().getId() : null);
-        dto.setNomeDoador(getStringField(estatistica, "nomeDoador"));
-        dto.setAnoCompetencia(estatistica.getAnoCompetencia());
-        dto.setMesCompetencia(estatistica.getMesCompetencia());
-        dto.setPeriodicidade(estatistica.getPeriodicidade());
-        dto.setAtualizadoPor(estatistica.getAtualizadoPor());
-        dto.setDataAtualizacao(estatistica.getDataAtualizacao());
-
-        Map<String, String> campos = new LinkedHashMap<>();
-        for (String campo : CAMPOS_PROTOCOLO) {
-            String valor = getStringField(estatistica, campo);
-            if (valor != null) {
-                campos.put(campo, valor);
-            }
-        }
-        for (String campo : CAMPOS_SIM_NAO) {
-            String valor = getStringField(estatistica, campo);
-            if (valor != null && !campos.containsKey(campo)) {
-                campos.put(campo, valor);
-            }
-        }
-
-        dto.setCampos(campos);
-        return dto;
     }
 
     private String getStringField(EstatisticaProtocoloME estatistica, String fieldName) {
         try {
-            Field field = EstatisticaProtocoloME.class.getDeclaredField(fieldName);
-            field.setAccessible(true);
+            Field field = FIELD_CACHE.get(fieldName);
+            if (field == null) return null;
             Object value = field.get(estatistica);
             return value != null ? value.toString() : null;
-        } catch (NoSuchFieldException | IllegalAccessException e) {
+        } catch (Exception e) {
             return null;
         }
     }
 
     private String writeCamposJson(Map<String, String> campos) {
         try {
-            return objectMapper.writeValueAsString(campos != null ? campos : Collections.emptyMap());
+            return objectMapper.writeValueAsString(
+                    campos != null ? campos : Collections.emptyMap()
+            );
         } catch (Exception e) {
-            throw new IllegalStateException("Erro ao serializar campos da estatística", e);
+            throw new IllegalStateException("Erro ao serializar campos", e);
         }
     }
 
-    public static class ProtocoloSemEstatisticaDTO {
+    // =========================
+    // DTO
+    // =========================
 
-        private Long protocoloId;
-        private String numeroProtocolo;
-        private Long pacienteId;
-        private String nomeDoador;
-        private Integer ano;
+    private EstatisticaProtocoloMEDTO toDTO(EstatisticaProtocoloME estatistica, ProtocoloME protocolo) {
 
-        public Long getProtocoloId() { return protocoloId; }
-        public void setProtocoloId(Long protocoloId) { this.protocoloId = protocoloId; }
+        EstatisticaProtocoloMEDTO dto = new EstatisticaProtocoloMEDTO();
 
-        public String getNumeroProtocolo() { return numeroProtocolo; }
-        public void setNumeroProtocolo(String numeroProtocolo) { this.numeroProtocolo = numeroProtocolo; }
+        dto.setId(estatistica.getId());
+        dto.setProtocoloMEId(protocolo != null ? protocolo.getId() : null);
+        dto.setNumeroProtocolo(protocolo != null ? protocolo.getNumeroProtocolo() : null);
 
-        public Long getPacienteId() { return pacienteId; }
-        public void setPacienteId(Long pacienteId) { this.pacienteId = pacienteId; }
+        dto.setNomeDoador(getStringField(estatistica, "nomeDoador"));
+        dto.setAnoCompetencia(estatistica.getAnoCompetencia());
+        dto.setMesCompetencia(estatistica.getMesCompetencia());
+        dto.setPeriodicidade(estatistica.getPeriodicidade());
 
-        public String getNomeDoador() { return nomeDoador; }
-        public void setNomeDoador(String nomeDoador) { this.nomeDoador = nomeDoador; }
+        Map<String, String> campos = new LinkedHashMap<>();
 
-        public Integer getAno() { return ano; }
-        public void setAno(Integer ano) { this.ano = ano; }
+        for (String campo : CAMPOS_PROTOCOLO) {
+            String valor = getStringField(estatistica, campo);
+            if (valor != null) campos.put(campo, valor);
+        }
+
+        for (String campo : CAMPOS_SIM_NAO) {
+            String valor = getStringField(estatistica, campo);
+            if (valor != null) campos.put(campo, valor);
+        }
+
+        dto.setCampos(campos);
+
+        return dto;
     }
 }
